--- a/hal/LaserTempPID.ioc
+++ b/hal/LaserTempPID.ioc
@@ -7,17 +7,22 @@ GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F405RGT6
 Mcu.Family=STM32F4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=USART1
-Mcu.IP4=USART6
-Mcu.IPNb=5
+Mcu.IP0=I2C1
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=USART1
+Mcu.IP5=USART6
+Mcu.IPNb=6
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=VP_SYS_VS_tim1
+Mcu.Pin10=PB4
+Mcu.Pin11=PB5
+Mcu.Pin12=PB6
+Mcu.Pin13=PB7
+Mcu.Pin14=VP_SYS_VS_tim1
 Mcu.Pin2=PA4
 Mcu.Pin3=PA5
 Mcu.Pin4=PC6
@@ -26,8 +31,9 @@ Mcu.Pin6=PA9
 Mcu.Pin7=PA10
 Mcu.Pin8=PA13
 Mcu.Pin9=PA14
-Mcu.PinsNb=11
-Mcu.ThirdPartyNb=0
+Mcu.PinsNb=15
+Mcu.ThirdParty0=RealThread.X-CUBE-RT-Thread_Nano.4.1.1
+Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
 MxCube.Version=6.15.0
@@ -35,10 +41,10 @@ MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
@@ -56,10 +62,27 @@ PA4.GPIOParameters=PinState
 PA4.Locked=true
 PA4.PinState=GPIO_PIN_RESET
 PA4.Signal=GPIO_Output
+PA5.GPIOParameters=PinState
 PA5.Locked=true
+PA5.PinState=GPIO_PIN_RESET
 PA5.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB4.GPIOParameters=PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PB4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB4.GPIO_PuPd=GPIO_PULLUP
+PB4.Locked=true
+PB4.PinState=GPIO_PIN_SET
+PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Speed,PinState
+PB5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB5.Locked=true
+PB5.PinState=GPIO_PIN_SET
+PB5.Signal=GPIO_Output
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
 PC6.Mode=Asynchronous
 PC6.Signal=USART6_TX
 PC7.Mode=Asynchronous
@@ -100,7 +123,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_USART6_UART_Init-USART6-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.48MHZClocksFreq_Value=75000000
 RCC.AHBFreq_Value=150000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -135,6 +158,8 @@ RCC.VCOI2SOutputFreq_Value=320000000
 RCC.VCOInputFreq_Value=1666666.6666666667
 RCC.VCOOutputFreq_Value=300000000
 RCC.VcooutputI2S=160000000
+RealThread.X-CUBE-RT-Thread_Nano.4.1.1.RTOSJjRTAaThread_Checked=false
+RealThread.X-CUBE-RT-Thread_Nano.4.1.1_SwParameter=RTAaThreadCcRTOSJjshell\:true;RTAaThreadCcRTOSJjlibcpu\:true;RTAaThreadCcRTOSJjkernel\:true;
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART6.IPParameters=VirtualMode
