--- a/hal/LaserTempPID.ioc
+++ b/hal/LaserTempPID.ioc
@@ -23,14 +23,15 @@ Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PC10
-Mcu.Pin11=PC11
-Mcu.Pin12=PC12
-Mcu.Pin13=PB4
-Mcu.Pin14=PB5
-Mcu.Pin15=PB6
-Mcu.Pin16=PB7
-Mcu.Pin17=VP_SYS_VS_tim1
+Mcu.Pin10=PA15
+Mcu.Pin11=PC10
+Mcu.Pin12=PC11
+Mcu.Pin13=PC12
+Mcu.Pin14=PB4
+Mcu.Pin15=PB5
+Mcu.Pin16=PB6
+Mcu.Pin17=PB7
+Mcu.Pin18=VP_SYS_VS_tim1
 Mcu.Pin2=PA4
 Mcu.Pin3=PA5
 Mcu.Pin4=PC6
@@ -39,7 +40,7 @@ Mcu.Pin6=PA9
 Mcu.Pin7=PA10
 Mcu.Pin8=PA13
 Mcu.Pin9=PA14
-Mcu.PinsNb=18
+Mcu.PinsNb=19
 Mcu.ThirdParty0=RealThread.X-CUBE-RT-Thread_Nano.4.1.1
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -66,6 +67,11 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_Speed,PinState
+PA15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PA15.Locked=true
+PA15.PinState=GPIO_PIN_SET
+PA15.Signal=GPIO_Output
 PA4.GPIOParameters=PinState
 PA4.Locked=true
 PA4.PinState=GPIO_PIN_RESET
@@ -174,10 +180,11 @@ RCC.VCOOutputFreq_Value=300000000
 RCC.VcooutputI2S=160000000
 RealThread.X-CUBE-RT-Thread_Nano.4.1.1.RTOSJjRTAaThread_Checked=false
 RealThread.X-CUBE-RT-Thread_Nano.4.1.1_SwParameter=RTAaThreadCcRTOSJjshell\:true;RTAaThreadCcRTOSJjlibcpu\:true;RTAaThreadCcRTOSJjkernel\:true;
-SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI3.CalculateBaudRate=18.75 MBits/s
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
+SPI3.CLKPhase=SPI_PHASE_2EDGE
+SPI3.CalculateBaudRate=2.34375 MBits/s
 SPI3.Direction=SPI_DIRECTION_2LINES
-SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPhase
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
 USART1.IPParameters=VirtualMode
